WineEvidence add note to entity
